[gd_scene load_steps=3 format=3 uid="uid://cbcka63gorrow"]

[ext_resource type="Script" path="res://Scripts/Other/Dialogue.gd" id="1_o1koc"]

[sub_resource type="SystemFont" id="SystemFont_rdveb"]
font_names = PackedStringArray("Cascadia Mono")

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1koc")

[node name="Text" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.815686)
theme_override_fonts/normal_font = SubResource("SystemFont_rdveb")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
fit_content = true

[node name="NextChar" type="Timer" parent="."]
wait_time = 0.2

[node name="EndGameTimer" type="Timer" parent="."]
one_shot = true

[node name="NextMessage" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="NextChar" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="EndGameTimer" to="." method="_on_end_game_timer_timeout"]
[connection signal="timeout" from="NextMessage" to="." method="_on_next_message_timeout"]
